@@ -17,4 +17,4 @@ my $count = $authors->count;
 print "Count of Czech CPAN authors: $count\n";
 
 # Output:
-# Count of Czech CPAN authors: 27
+# Count of Czech CPAN authors: 28
