@@ -12,6 +12,7 @@ my $obj = Acme::CPANAuthors->new('Czech');
 my @ret = $obj->id;
 my @right_ret = ('CHOROBA', 'DANIELR', 'DANPEDER', 'HIHIK', 'HPA', 'JANPAZ',
 	'JANPOM', 'JENDA', 'JSPICAK', 'KLE', 'MAJLIS', 'MILSO', 'MJFO',
-	'PAJAS', 'PASKY', 'PEK', 'POPEL', 'PSME', 'RUR', 'RVASICEK', 'SKIM',
-	'SMRZ', 'STRAKA', 'TKR', 'TRIPIE', 'ZEMAN', 'ZOUL');
+	'PAJAS', 'PASKY', 'PEK', 'POPEL', 'PSME', 'RUR', 'RVASICEK',
+	'SEIDLJAN', 'SKIM', 'SMRZ', 'STRAKA', 'TKR', 'TRIPIE', 'ZEMAN',
+	'ZOUL');
 is_deeply(\@ret, \@right_ret, 'CPAN authors ids.');
