@@ -1,4 +1,5 @@
 0.14
+ - Add SEIDLJAN CPAN account.
 
 0.13 2014-09-06T04:23:03+02:00
  - Add PSME CPAN account.
